First working version online

--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
     </header>
     <div id="main" role="main">
         <div id="app" class="main-content">
-            <a class="twitter-timeline" href="https://twitter.com/ambidextrousTx" data-widget-id="301184007083802624">Tweets
+            <a class="twitter-timeline" width="600" height="350" data-border-color="#222" data-theme="dark"
+               href="https://twitter.com/ambidextrousTx"
+               data-widget-id="301184007083802624">Tweets
                 by @ambidextrousTx</a>
             <script>!function (d, s, id) {
                 var js, fjs = d.getElementsByTagName(s)[0];
