Google Web Fonts, Colors, Gitignore

--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
     <!-- CSS concatenated and minified via ant build script-->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/my.style.css">
+
+    <!--Google Web Fonts to give a modern look to the Website -->
+    <link href='http://fonts.googleapis.com/css?family=Fredericka+the+Great' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Jura:300' rel='stylesheet' type='text/css'>
+
     <!-- end CSS-->
 
     <!-- More ideas for your <head> here: h5bp.com/d/head-Tips -->
@@ -115,7 +121,7 @@
 <script defer src="js/script.js"></script>
 <!-- end scripts-->
 
-<!-- adding Backbone and others -->
+<!-- adding Backbone and others, at the end according to speed best practices -->
 <!-- ORDERING IMPORTANT -->
 <script type="text/javascript" src="js/libs/underscore-min.js"></script>
 <script type="text/javascript" src="js/libs/jquery-2.0.0.min.js"></script>
