Added more links, added Art segment, new elevator pitch

--- a/index.html
+++ b/index.html
@@ -54,9 +54,8 @@
 
             <h1>Ravi S Sinha is Ambidextrous</h1>
 
-            <p> Watson Software Engineer @IBM. Open Source contributor to Python and elsewhere. Passionate developer,
-                fitness
-                enthusiast, trilingual, and a work in progress. @ambidextrousTx on Twitter.</p>
+            <p> Passionate software developer, engineer, researcher, scientist, open sourcer, fitness enthusiast,
+                trilingual. Work in progress. @IBM. Opinions are my own. @ambidextrousTx on Twitter.</p>
         </div>
         <div class="nav">
             <ul>
@@ -69,7 +68,8 @@
                 <li><a href="#/Blog">Blog</a></li>
                 <li><a href="#/Codelog">Codelog</a></li>
                 <li><a href="#/Playground">Playground</a></li>
-                <li><a href="#/Contact">Contact</a></li>
+                <li><a href="#/Art">Art</a></li>
+                <li><a href="#/Contact">Elsewhere</a></li>
 
             </ul>
         </div>
