Add Jurgen Appelo icons, add StackExchange link

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <h1>Ravi S Sinha is Ambidextrous</h1>
 
             <p> Passionate software developer, engineer, researcher, scientist, open sourcer, fitness enthusiast,
-                trilingual. Work in progress. @IBM. Opinions are my own. @ambidextrousTx on Twitter.</p>
+                trilingual. Work in progress. @IBM working with the Watson technology. Opinions are my own. @ambidextrousTx on Twitter.</p>
         </div>
         <div class="nav">
             <ul>
