Add icon attribution and date modified

--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
                 <img src="apple-touch-icon-114x114-precomposed.png" height="30px"/>
             </li>
         </ul>
+        <p>Icons courtesy of <a href="http://www.jurgenappelo.com/contact/" target="_blank">this Website</a></p>
+        <p>Last Website update: Nov 18, 2013</p>
     </footer>
 </div>
 <!--! end of #container -->
