--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
             <h1>Ravi S Sinha is Ambidextrous</h1>
 
             <p> Passionate software developer, engineer, researcher, scientist, open sourcer, fitness enthusiast,
-                trilingual. Work in progress. @IBM working with the Watson technology. Opinions are my own. @ambidextrousTx on Twitter.</p>
+                trilingual. Work in progress. @IBM working with the Watson technology. Opinions are my own.
+                @ambidextrousTx on Twitter.</p>
         </div>
         <div class="nav">
             <ul>
@@ -98,14 +99,18 @@
     <footer class="footer">
         <ul>
             <li>
+                <p>Icons courtesy of <a href="http://www.jurgenappelo.com/contact/" target="_blank">this Website</a></p>
+            </li>
+            <li>
                 <img src="img/backbone.png" height="30px"/>
             </li>
             <li>
                 <img src="apple-touch-icon-114x114-precomposed.png" height="30px"/>
             </li>
+            <li>
+                <p>Last Website update: Dec 8, 2013</p>
+            </li>
         </ul>
-        <p>Icons courtesy of <a href="http://www.jurgenappelo.com/contact/" target="_blank">this Website</a></p>
-        <p>Last Website update: Nov 18, 2013</p>
     </footer>
 </div>
 <!--! end of #container -->
@@ -147,10 +152,17 @@
 </script>
 
 <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function () {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
     ga('create', 'UA-2411130-4', 'ambidextrous.name');
     ga('send', 'pageview');
