Add basic JavaScript easter eggs on title

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <header>
         <div class="logo">
 
-            <h1>Ravi S Sinha is Ambidextrous</h1>
+            <h1 id="flip-text-holder">Ravi S Sinha is Ambidextrous</h1>
 
             <p> Passionate software developer, engineer, researcher, scientist, open sourcer, fitness enthusiast,
                 trilingual. Work in progress. @IBM working with the Watson technology. Opinions are my own.
@@ -108,7 +108,7 @@
                 <img src="apple-touch-icon-114x114-precomposed.png" height="30px"/>
             </li>
             <li>
-                <p>Last Website update: Feb 10, 2014</p>
+                <p>Last Website update: Jun 1, 2014</p>
             </li>
         </ul>
     </footer>
@@ -137,6 +137,7 @@
 
 <!-- adding own library -->
 <script type="text/javascript" src="js/ambidextrous.js"></script>
+<script type="text/javascript" src="js/mylibs/basic_js.js"></script>
 
 
 <!-- Change UA-XXXXX-X to be your site's ID -->
