Add setInterval rotation in subtitle

--- a/index.html
+++ b/index.html
@@ -54,9 +54,8 @@
 
             <h1 id="flip-text-holder">Ravi S Sinha is Ambidextrous</h1>
 
-            <p> Passionate software developer, engineer, researcher, scientist, open sourcer, fitness enthusiast,
-                trilingual. Work in progress. @IBM working with the Watson technology. Opinions are my own.
-                @ambidextrousTx on Twitter.</p>
+            <p id="skills-flash"> </p>
+            <p>@IBM working with the Watson technology. Opinions are my own. @ambidextrousTx on Twitter.</p>
         </div>
         <div class="nav">
             <ul>
