Add classes dynamically to subtitle

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
             <h1 id="flip-text-holder">Ravi S Sinha is Ambidextrous</h1>
 
-            <p id="skills-flash"> </p>
+            <p id="skills-flash">Passionate software developer</p>
             <p>@IBM working with the Watson technology. Opinions are my own. @ambidextrousTx on Twitter.</p>
         </div>
         <div class="nav">
@@ -107,7 +107,7 @@
                 <img src="apple-touch-icon-114x114-precomposed.png" height="30px"/>
             </li>
             <li>
-                <p>Last Website update: Jun 1, 2014</p>
+                <p>Last Website update: Jun 3, 2014</p>
             </li>
         </ul>
     </footer>
