--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/my.style.css">
 
+    <!--Need to do it here because want to use a script directly-->
+    <script type="text/javascript" src="js/libs/moment.min.js"></script>
+
     <!--Google Web Fonts to give a modern look to the Website -->
     <link href='http://fonts.googleapis.com/css?family=Fredericka+the+Great' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'>
@@ -106,8 +109,17 @@
             <li>
                 <img src="apple-touch-icon-114x114-precomposed.png" height="30px"/>
             </li>
+
             <li>
-                <p>Last Website update: Jun 3, 2014</p>
+                <p>Last Website update: Aug 27, 2014</p>
+            </li>
+        </ul>
+        <ul>
+            <li>
+                <div id="moment">
+
+                </div>
+
             </li>
         </ul>
     </footer>
